--- a/demosearch.html
+++ b/demosearch.html
@@ -28,16 +28,17 @@
         </p>
         <ul>
             <li ng-repeat="x in programminglanguagenames| filter: testfilter">
-                {{ x |myfillter }}
+                {{ x |myfilter }}
             </li>
         </ul>
     </div>
+
     <script>
         var app = angular.module('app1', []);
         app.filter('myfilter', function(){
             return function(x){
                 var i, c, txt="";
-                for(i=0;i<x.length; i++){
+                for(i=0;i<x.length;i++){
                     c= x[i];
                     c= c.toUpperCase();
                     txt += c;
